# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Fixed the nsedebug print_hex() function so it does not print an
  empty line if there are no remaining characters, and improved its NSEDoc.
  [Chris Woodbury].

o [NSE] Added the scripts http-axis2-dir-traversal and http-litespeed-sourcecode-download
  that exploits a directory traversal and null byte poisoning vulnerabilities in
  Apache Axis2 and LiteSpeed Web Server respectively. [Paulino]
  
o [Ncat] Ncat now no longer blocks while an ssl handshake is taking place or
  waiting to complete. [Shinnok]

o [NSE] Added the script broadcast-dhcp-discover that sends a DHCP discover
  message to the broadcast address and collects and reports the network
  information received from the DHCP server. [Patrik]

o [NSE] Added the script smtp-brute that performs brute force password
  auditing against SMTP servers. [Patrik]

o [NSE] Updated SMTP library to support authentication using both plain-text
  and the SASL library. [Patrik]

o [NSE] Added the script imap-brute that performs brute force password
  auditing against IMAP servers. [Patrik]

o [NSE] Updated IMAP library to support authentication using both plain-text
  and the SASL library. [Patrik]

o [NSE] Added SASL library created by Djalal Harouni and Patrik Karlsson
  providing common code for "Simple Authentication and Security Layer" to
  services supporting it. The algorithms supported by the library are:
  PLAIN, CRAM-MD5, DIGEST-MD5 and NTLM. [Patrik Karlsson, Djalal Harouni]

o [NSE] Added scripts cvs-brute.nse, cvs-brute-repository.nse and the cvs
  library. The cvs-brute-repository script allows for guessing possible
  repository names needed in order to perform password guessing using the
  cvs-brute.nse script. [Patrik]

o [Zenmap] The Zenmap crash handler now instructs you to mail in crash
  information to nmap-dev. [Colin Rice]

o Added IPv6 Neighbor Discovery ping. This is the IPv6 analog to IPv4